--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ html, body {
 
 h2{
   text-align: center;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: "Comic Sans MS";
 }
