--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 html, body {
-  background-color: #909090;
   text-align: center;
   height: 100%;
   width: 100%;
@@ -8,4 +7,10 @@ html, body {
 h2{
   text-align: center;
   font-family: "Comic Sans MS";
+}
+
+#background {
+  width: 100%;
+  height: 100%;
+  background : url('https://avatars.githubusercontent.com/u/96890698?v=4');
 }
