--- a/style.css
+++ b/style.css
@@ -12,5 +12,11 @@ h2{
 #background {
   width: 100%;
   height: 100%;
-  background : url('https://avatars.githubusercontent.com/u/96890698?v=4');
+  background : url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/db29489e42cdc0a5fc9be523f5a58f90802f3981.jpg');
+}
+
+#content {
+  width: 100%;
+  height: 100%;
+  background : url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/db29489e42cdc0a5fc9be523f5a58f90802f3981.jpg');
 }
