--- a/style.css
+++ b/style.css
@@ -10,13 +10,23 @@ h2{
 }
 
 #background {
-  width: 100%;
-  height: 100%;
-  background : url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/db29489e42cdc0a5fc9be523f5a58f90802f3981.jpg');
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
 }
 
-#content {
-  width: 100%;
+#sidebar {
+  float:left;
+  width: 20%;
+  height: 100%;
+  background : url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/523ba0496eb5d9844e5bb8d7ae5c261e0b13f228.jpg');
+}
+
+#main-content {
+  float:right;
+  width: 80%;
   height: 100%;
   background : url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/db29489e42cdc0a5fc9be523f5a58f90802f3981.jpg');
 }
