--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ h2{
 
 #sidebar {
   float:left;
+  outline: 3px solid black;
+  outline-offset: -3px;
   width: 20%;
   height: 100%;
   background : url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/523ba0496eb5d9844e5bb8d7ae5c261e0b13f228.jpg');
@@ -29,4 +31,14 @@ h2{
   width: 80%;
   height: 100%;
   background : url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/db29489e42cdc0a5fc9be523f5a58f90802f3981.jpg');
+}
+
+#cool-ppl {
+  position: absolute;
+  border: 3px solid rgb(0, 119, 255);
+  width: 18%;
+  height: 15%;
+  bottom: -5%;
+  left: 10%;
+  transform: translate(-50%, -50%);
 }
