--- a/style.css
+++ b/style.css
@@ -33,12 +33,39 @@ h2{
   background : url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/db29489e42cdc0a5fc9be523f5a58f90802f3981.jpg');
 }
 
+#content-frame {
+  position: absolute;
+  width: fit-content;
+  height: fit-content;
+  border: 3px solid black;
+  border-radius: 15px;
+  padding: 15px;
+  background:white;
+  top: 20px;
+  left: 60%;
+  transform: translate(-50%, 0%);
+}
+
+#navbar {
+  position: absolute;
+  border: 3px solid rgb(208, 49, 68);
+  border-radius: 7px;
+  background: rgb(255, 221, 255);
+  width: 18%;
+  height: 7%;
+  bottom: calc( 15px + 15% + 15px);
+  left: 10%;
+  transform: translate(-50%, 0%);
+}
+
 #cool-ppl {
   position: absolute;
-  border: 3px solid rgb(0, 119, 255);
+  border: 3px solid rgb(208, 49, 68);
+  border-radius: 7px;
+  background: rgb(255, 221, 255);
   width: 18%;
   height: 15%;
-  bottom: -5%;
+  bottom: 15px;
   left: 10%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0%);
 }
