--- a/style.css
+++ b/style.css
@@ -51,8 +51,9 @@ h2{
   border: 3px solid rgb(208, 49, 68);
   border-radius: 7px;
   background: rgb(255, 221, 255);
-  width: 18%;
-  height: 7%;
+  width: calc(18% - 14px);
+  height: 66;
+  padding: 4px;
   bottom: calc( 15px + 15% + 15px);
   left: 10%;
   transform: translate(-50%, 0%);
@@ -63,8 +64,9 @@ h2{
   border: 3px solid rgb(208, 49, 68);
   border-radius: 7px;
   background: rgb(255, 221, 255);
-  width: 18%;
-  height: 15%;
+  width: calc(18% - 8px);
+  height: calc(15% - 8px);
+  padding: 4px;
   bottom: 15px;
   left: 10%;
   transform: translate(-50%, 0%);
