--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ h2{
 }
 
 #background {
-  position: absolute;
+  position: fixed;
   top: 0px;
-  bottom: 0px;
   left: 0px;
-  right: 0px;
+  width: 100%;
+  height: 100%;
 }
 
 #sidebar {
