--- a/style.css
+++ b/style.css
@@ -16,40 +16,21 @@ h2{
 }
 
 #sidebar {
-  float:left;
+  position: absolute;
+  top: 0px;
+  left: 0px;
   outline: 3px solid black;
   outline-offset: -3px;
-  width: 20%;
+  width: 350px;
   height: 100%;
   background-color: #8b2cc9;
-  background : url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/523ba0496eb5d9844e5bb8d7ae5c261e0b13f228.jpg');
-}
-
-#main-content {
-  float:right;
-  width: 80%;
-  height: 100%;
-  background-color: #f75e72;
-  background : url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/db29489e42cdc0a5fc9be523f5a58f90802f3981.jpg');
-}
-
-#content-frame {
-  position: absolute;
-  width: fit-content;
-  height: fit-content;
-  border: 3px solid black;
-  border-radius: 15px;
-  padding: 15px;
-  background:white;
-  top: 20px;
-  left: 60%;
-  transform: translate(-50%, 0%);
+  /*background: url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/523ba0496eb5d9844e5bb8d7ae5c261e0b13f228.jpg');*/
 }
 
 #radioDiv {
-  position: fixed;
-  top: 50px;
-  left: 10%;
+  position: absolute;
+  top: 0px;
+  left: 50%;
   width: 90px;
   height: 90px;
   transform: translate(-50%, 0%);
@@ -79,16 +60,27 @@ h2{
   image-rendering: pixelated;
 }
 
+#accounts {
+  position: absolute;
+  top: 17px;
+  left: 50%;
+  height: 50%;
+  width: 90%;
+  border-radius: 7px;
+  background-color: #fff;
+  transform: translate(-50%, 0%);
+}
+
 #navbar {
   position: absolute;
   border: 3px solid rgb(208, 49, 68);
   border-radius: 7px;
   background: rgb(255, 221, 255);
-  width: calc(18% - 14px);
-  height: 66;
+  width: 300px;
+  height: 66px;
   padding: 4px;
-  bottom: calc( 15px + 15% + 15px);
-  left: 10%;
+  bottom: 150px;
+  left: 50%;
   transform: translate(-50%, 0%);
 }
 
@@ -97,10 +89,33 @@ h2{
   border: 3px solid rgb(208, 49, 68);
   border-radius: 7px;
   background: rgb(255, 221, 255);
-  width: calc(18% - 8px);
-  height: calc(15% - 8px);
+  width: 300px;
+  height: 115px;
   padding: 4px;
   bottom: 15px;
-  left: 10%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
+#main-content {
+  position: absolute;
+  top: 0px;
+  left: 350px;
+  width: calc(100% - 350px);
+  height: 100%;
+  background-color: #f75e72;
+  /*background: url('https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/items/2861690/db29489e42cdc0a5fc9be523f5a58f90802f3981.jpg');*/
+}
+
+#content-frame {
+  position: absolute;
+  width: fit-content;
+  height: fit-content;
+  border: 3px solid black;
+  border-radius: 15px;
+  padding: 15px;
+  background:white;
+  top: 20px;
+  left: 50%;
   transform: translate(-50%, 0%);
 }
