--- a/style.css
+++ b/style.css
@@ -66,6 +66,12 @@ h2{
   left: 50%;
   height: 50%;
   width: 90%;
+	display: flex;
+	flex-direction: column;
+	column-gap: 8px;
+  padding: 5px;
+	overflow-y: scroll;
+  scrollbar-width: none;
   border-radius: 7px;
   background-color: #fff;
   transform: translate(-50%, 0%);
@@ -75,13 +81,14 @@ h2{
   position: relative;
   height: calc( 100% - 20px );
   width: calc( 100% - 20px );
+	gap: 8px;
   top: 10px;
   left: 10px;
-	display: flex;
-	flex-direction: column;
-	gap: 8px;
-	overflow-y: scroll;
-  scrollbar-width: none;
+}
+
+.tempGap {
+  position: relative;
+  height: 8px;
 }
 
 .account {
