--- a/style.css
+++ b/style.css
@@ -104,13 +104,26 @@ h2{
   height: 170px;
 }
 
+#githubAccount {
+  height: 100px;
+}
+
 .accountAvatar {
 	position: absolute;
-  top: 55px;
   left: 10px;
 	width: 20%;
   border:2px solid #ddd;
 	border-radius: 50%;
+}
+
+#githubAvatar {
+	position: absolute;
+  top: 55px;
+}
+
+#githubAvatar {
+	position: absolute;
+  top: 10px;
 }
 
 .accountBanner {
@@ -134,6 +147,11 @@ h2{
   text-decoration: none;
 }
 
+#githubName {
+  position: absolute;
+  top: 55px;
+}
+
 .accountHandle {
   position: absolute;
   top: 135px;
@@ -148,6 +166,22 @@ h2{
 }
 
 .accountFollowDiv {
+  position: absolute;
+  top: 160px;
+  left: 10px;
+  font-size: 13px;
+	font-family: "Inter", sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 300;
+	font-style: normal;
+  flex-direction: row;
+  gap: 8px;
+  align-items: center;
+  color: rgb(66, 87, 108);
+  text-decoration: none;
+}
+
+.accountRepoDiv {
   position: absolute;
   top: 160px;
   left: 10px;
